# tempmail-sdk

./: .baseline_channels.txt  .channel_meta.json  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  devlog.md  utputFormat
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  recover-token.yml  release.yml
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
sdk/c/: CMakeLists.txt  README.md
sdk/c/example/: main.c
sdk/c/include/: tempmail_internal.h  tempmail_registry.h  tempmail_sdk.h
sdk/c/scripts/: gen_webui_html.py
sdk/c/src/: client.c  http.c  logger.c  normalize.c  registry.c  retry.c  telemetry.c  types.c  webui.c  webui.h  webui_html.h
sdk/c/src/providers/: 16888888_cyou.c  17666688_shop.c  282mail_com.c  altmails.c  anonbox.c  anonymmail.c  apihz.c  awamail.c  b_smelly_cc.c  best_temp_mail.c  binkmail_com.c  blackhole_djurby_se.c  block_bdea_cc.c  bobmail_info.c  boomlify.c  bsdu32_buzz.c  byom.c  carlton183_changeip_net.c  catchmail.c  chammy_info.c  chatgpt_org_uk.c  cleantempmail.c  crap_kakadua_net.c  dea_soon_it.c  devmail_uk.c  disposable_al_sudani_com.c  disposable_nogonad_nl.c  disposablemail_app.c  disposablemail_com.c  doxu243_buzz.c  dropmail.c  dropmail_click.c  dropmail_me.c  duckmail.c  easyme_pro.c  ebs_com_ar.c  email10min.c  emailnator.c  emailtemp_org.c  etempmail.c  (+161 more)
sdk/csharp/: README.md
sdk/csharp/scripts/: gen_webui_html.py
sdk/csharp/src/: Channels.cs  Config.cs  Http.cs  Json.cs  Normalize.cs  Registry.cs  RegistryChannels.cs  Retry.cs  Telemetry.cs  TempMail.cs  Types.cs  WebUI.cs  WebUIHtml.cs  XxxXTeam.TempMail.csproj
sdk/csharp/tests/: Program.cs  XxxXTeam.TempMail.Tests.csproj
sdk/go/: README.md  backend_groups.go  bridge_init.go  channel_domains.go  client.go  config.go  go.mod  go.sum  linshi_token.go  logger.go  normalize.go  provider_anonbox.go  provider_awamail.go  provider_boomlify.go  provider_chatgpt_org_uk.go  provider_dropmail.go  provider_emailnator.go  provider_fake_legal.go  provider_guerrillamail.go  provider_linshi_email.go  provider_linshiyou.go  provider_mail_cx.go  provider_mail_gw.go  provider_mail_tm.go  provider_maildrop.go  provider_mffac.go  provider_minmail.go  provider_smail_pw.go  provider_temp_mail_io.go  provider_tempmail.go  provider_tempmail_la.go  provider_tempmail_lol.go  provider_vip_215.go  registry.go  registry_baseline_test.go  registry_channels.go  retry.go  telemetry.go  types.go  webui.go  (+1 more)
sdk/go/demo/: go.mod  poll_emails.go
sdk/go/example/: go.mod  go.sum  main.go
sdk/go/provider/: altmails.go  anonbox.go  anonymmail.go  apihz.go  awamail.go  b_smelly_cc.go  best_temp_mail.go  binkmail_com.go  blackhole_djurby_se.go  block_bdea_cc.go  bobmail_info.go  boomlify.go  bridge.go  bsdu32_buzz.go  byom.go  carlton183_changeip_net.go  catchmail.go  chammy_info.go  chatgpt_org_uk.go  cleantempmail.go  crap_kakadua_net.go  dea_soon_it.go  devmail_uk.go  disposable_al_sudani_com.go  disposable_nogonad_nl.go  disposablemail.go  disposablemail_app.go  doxu243_buzz.go  dropmail.go  dropmail_click.go  dropmail_me.go  duckmail.go  easyme_pro.go  ebs_com_ar.go  email10min.go  emailnator.go  emailtemp_org.go  etempmail.go  etgdev_de.go  evergreenco_shop.go  (+167 more)
sdk/go/verify/: dns.go  main.go  payloads.go
sdk/java/: README.md  pom.xml
sdk/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
sdk/npm/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sdk/npm/demo/: poll-emails.ts
sdk/npm/scripts/: smail-e2e.ts  smail-send-probe.ts  test-smail-parse.ts  test-smail-pw.ts
sdk/npm/src/: backend-groups.ts  channel-domains.ts  circuit-breaker.ts  config.ts  global.d.ts  html.ts  index.ts  logger.ts  normalize.ts  registry.ts  registry_channels.ts  retry.ts  telemetry.ts  types.ts  version.ts  webui.ts
sdk/npm/test/: audit-body-content-env.ts  debug-email10min-raw.ts  (+20 more)
sdk/php/: README.md  composer.json
sdk/python/: README.md  pyproject.toml
sdk/python/tempmail_sdk/: __init__.py  backend_groups.py  channel_domains.py  client.py  config.py  html_utils.py  http.py  logger.py  normalize.py  registry.py  retry.py  telemetry.py  types.py  webui.py
sdk/python/tempmail_sdk/providers/: __init__.py  altmails.py  anonbox.py  anonymmail.py  apihz.py  awamail.py  b_smelly_cc.py  best_temp_mail.py  binkmail_com.py  blackhole_djurby_se.py  block_bdea_cc.py  bobmail_info.py  boomlify.py  bsdu32_buzz.py  byom.py  carlton183_changeip_net.py  catchmail.py  chacuo_24mail.py  chammy_info.py  chatgpt_org_uk.py  cleantempmail.py  crap_kakadua_net.py  dea_soon_it.py  devmail_uk.py  disposable_al_sudani_com.py  disposable_nogonad_nl.py  disposablemail_app.py  disposablemail_com.py  doxu243_buzz.py  dropmail.py  dropmail_click.py  dropmail_me.py  duckmail.py  easyme_pro.py  ebs_com_ar.py  email10min.py  emailnator.py  emailtemp_org.py  etempmail.py  etgdev_de.py  (+175 more)
sdk/python/tests/: test_channel_baseline.py
sdk/ruby/: Gemfile  README.md  tempmail_sdk-1.0.0.gem  tempmail_sdk.gemspec
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: main.rs
sdk/rust/src/: backend_groups.rs  channel_domains.rs  client.rs  config.rs  lib.rs  logger.rs  normalize.rs  registry.rs  retry.rs  telemetry.rs  types.rs  webui.rs  webui_template.html
sdk/rust/src/providers/: altmails.rs  anonbox.rs  anonymmail.rs  apihz.rs  awamail.rs  b_smelly_cc.rs  best_temp_mail.rs  binkmail_com.rs  blackhole_djurby_se.rs  block_bdea_cc.rs  bobmail_info.rs  boomlify.rs  bsdu32_buzz.rs  byom.rs  carlton183_changeip_net.rs  catchmail.rs  chammy_info.rs  chatgpt_org_uk.rs  cleantempmail.rs  crap_kakadua_net.rs  dea_soon_it.rs  devmail_uk.rs  disposable_al_sudani_com.rs  disposable_nogonad_nl.rs  disposablemail_app.rs  disposablemail_com.rs  doxu243_buzz.rs  dropmail.rs  dropmail_click.rs  dropmail_me.rs  duckmail.rs  easyme_pro.rs  ebs_com_ar.rs  email10min.rs  emailnator.rs  emailtemp_org.rs  etempmail.rs  etgdev_de.rs  evergreenco_shop.rs  expressinboxhub.rs  (+165 more)
sdk/rust/tests/: channel_baseline.rs
webui/: app.js.html  index.html  template.html
(+835 files in other folders)
