[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempmail-sdk"
version = "1.0.3"
description = "临时邮箱 SDK，支持 11 个邮箱服务提供商，所有渠道返回统一标准化格式"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["tempmail_sdk*"]
