[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempemail-sdk"
version = "1.0.3"
description = "临时邮箱 SDK，所有渠道返回统一标准化格式"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.0",
    "websocket-client>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pygments>=2.19.2",
]

[tool.setuptools.packages.find]
include = ["tempmail_sdk*"]
