[package]
name = "tempmail-sdk"
version = "1.0.3"
edition = "2021"
rust-version = "1.88"
description = "临时邮箱 SDK，支持 12 个邮箱服务提供商，所有渠道返回统一标准化格式"
license = "GPL-3.0"
repository = "https://github.com/XxxXTeam/tempmail-sdk"
homepage = "https://github.com/XxxXTeam/tempmail-sdk"
readme = "README.md"
keywords = ["tempmail", "email", "temporary-email", "disposable-email"]
categories = ["api-bindings", "email"]

[dependencies]
wreq = { version = "6.0.0-rc", features = ["json", "cookies", "gzip", "brotli", "zstd", "socks", "form"] }
wreq-util = { version = "3.0.0-rc", features = ["emulation"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
log = "0.4"
chrono = "0.4"
urlencoding = "2"
regex-lite = "0.1"
regex = "1"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
tungstenite = { version = "0.24", features = ["native-tls"] }
